[package]
authors = ["nshout", "kangalio <jannik.a.schaper@web.de>"]
edition = "2018"
name = "poise"
version = "0.7.0-alpha"
rust-version = "1.74.0"
description = "A Discord bot framework for Serenity with user account support"
license = "MIT"
repository = "https://github.com/serenity-rs/poise/"

[dependencies]
tokio = { version = "1.41.1", default-features = false } # for async in general
futures-util = { version = "0.3.31", default-features = false } # for async in general
poise_macros = { path = "macros", version = "0.6.0" } # remember to update the version on changes!
async-trait = { version = "0.1.83", default-features = false } # various traits
regex = { version = "1.11.1", default-features = false, features = [
  "std",
] } # prefix
tracing = { version = "0.1.41", features = ["log"] } # warning about weird state
derivative = "2.2.0"
parking_lot = "0.12.3"

[dependencies.serenity]
default-features = false
git = "https://github.com/kayhhh/serenity-self"
branch = "current"
features = [
  "builder",
  "client",
  "gateway",
  "model",
  "utils",
  "collector",
  "framework",
]

[dev-dependencies]
# For the examples
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
futures = { version = "0.3.31", default-features = false }
env_logger = "0.10.2"
fluent = "0.16.1"
intl-memoizer = "0.5.2"
fluent-syntax = "0.11"
rand = "0.8.5"

[features]
default = ["serenity/rustls_backend", "cache", "chrono", "handle_panics"]
chrono = ["serenity/chrono"]
cache = ["serenity/cache"]
# No-op feature because serenity/collector is now enabled by default
collector = []
# Enables support for handling panics inside commands via FrameworkError::CommandPanic.
# This feature has no overhead and can always be enabled.
# This feature exists because some users want to disable the mere possibility of catching panics at
# build time for peace of mind.
handle_panics = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_nightly"]
